remove empty & term elements, element info, util int2d

--- a/hb.config
+++ b/hb.config
@@ -2,4 +2,4 @@ theme=Default
 windowWidth=1600
 windowHeight=900
 fontSize=20
-favorites=/,/home
+favorites=/,/home,/home/vince/html-builder.git/test.html
