Full element Name config & getElementInfo

--- a/hb.config
+++ b/hb.config
@@ -1,6 +1,7 @@
-theme=Pink Heart
+theme=Default
 windowWidth=1600
 windowHeight=900
 fontSize=20
 favorites=/,/home,/home/vince/html-builder.git/test.html
 maxRawLength=24
+fullNames=1
