--- a/hb.config
+++ b/hb.config
@@ -1,7 +1,7 @@
-theme=Default
+theme=Pink Heart
 windowWidth=1600
 windowHeight=900
-fontSize=20
+fontSize=18
 favorites=/,/home,/home/vince/html-builder.git/test.html
 maxRawLength=24
 fullNames=1
